--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
    zöld: #2E8B57
 */
 
-/* ##### Window, Body ##### */
+/* ##### Global Styles ##### */
 
 * {
    margin: 0;
@@ -19,27 +19,48 @@
 
 body {
    font-family: "Roboto", sans-serif;
-   font-size: 18px;
    line-height: 1.6;
-   background-color: #f5f5f5;
-   color: #111111;
+   background-color: #f0f0f0;
+   color: #dedede;
 }
 
-/* ##### Navbar ##### */
+a {
+   font-size: 16px;
+   text-decoration: none;
+   letter-spacing: 1px;
+}
+
+p {
+   font-size: 18px;
+   letter-spacing: 0.5px;
+}
+
+h1 {
+   font-family: "Montserrat", sans-serif;
+   font-size: 48px;
+   line-height: 1.2;
+}
+
+h2 {
+   font-family: "Montserrat", sans-serif;
+   font-size: 36px;
+   line-height: 1.2;
+}
+
+/* ##### Navbar Styles ##### */
 
 #navbar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: 4rem;
-   background-color: #111111;
-   color: #fa7470;
+   background-color: #263131;
 }
 
-#navbar p {
+#navbar h2 {
    display: flex;
    align-items: center;
-   margin-left: 2rem;
+   margin-left: 1rem;
    margin-bottom: 0;
 }
 
@@ -51,18 +72,20 @@ body {
    margin-right: 2rem;
    width: 25rem;
    list-style: none;
+   font-weight: bold;
+   font-size: 18px;
 }
 
 #navbar #nav-menu-list li a {
-   padding: 1rem;
-   border-radius: 10px;
-   color: #fa7470;
-   transition: all ease 1s;
+   padding: 0.8rem;
+   border-radius: 50px;
+   color: #dedede;
+   transition: all ease 0.2s;
 }
 
 #navbar #nav-menu-list li a:hover {
-   background-color: #fa7470;
-   color: #111111;
+   background-color: #e3b394;
+   color: #181f1f;
 }
 
 /* Style the hamburger menu */
@@ -78,18 +101,6 @@ body {
    top: 0;
 }
 
-/* Add a grey background color on mouse-over */
-#navbar a:hover {
-   background-color: #ddd;
-   color: black;
-}
-
-/* Style the active link (or home/logo) */
-.active {
-   background-color: #04aa6d;
-   color: white;
-}
-
 @media (max-width: 768px) {
    #navbar #nav-menu-list {
       display: none;
@@ -99,43 +110,75 @@ body {
    }
 }
 
-h1 {
-   font-family: "Montserrat", sans-serif;
-   font-size: 48px;
-   line-height: 1.2;
-   color: #111111;
+/* ##### About Section Styles ##### */
+
+.container {
+   margin: 4rem 0;
+   overflow: hidden;
 }
 
-h2 {
-   font-family: "Montserrat", sans-serif;
-   font-size: 36px;
-   line-height: 1.2;
-   color: #111111;
+.container #about-section {
+   position: relative;
+   height: 51rem;
+   left: 6.5rem;
+}
+.container #about-section #about-img {
+   position: absolute;
+   background-color: #9d9d9d;
+   height: 51rem;
+   overflow: hidden;
+   padding-left: 3rem;
+}
+.container #about-section #about-img img {
+   height: 50rem;
+   margin-top: 1rem;
+}
+.container #about-section #about-text {
+   position: absolute;
+   border-radius: 50px;
+   height: 51rem;
+   width: 76.5rem;
+   left: 30rem;
+   background-color: #263131;
+   padding: 0 5rem;
 }
 
-/* Példá#nav-menu-list egy gomb */
-button {
-   font-family: "Roboto", sans-serif;
-   font-size: 16px;
-   padding: 10px 20px;
-   background-color: #007bff;
-   color: white;
-   border: none;
-   border-radius: 5px;
-   cursor: pointer;
+.container #about-section #about-text h1 {
+   margin-top: 10rem;
+   margin-bottom: 3rem;
+   padding: 1rem 0 1rem 0.5rem;
+   color: #263131;
+   background: linear-gradient(
+      90deg,
+      rgba(227, 179, 148, 1) 0%,
+      rgba(127, 110, 96, 1) 30%,
+      rgba(38, 49, 49, 1) 100%
+   );
 }
-button:hover {
-   background-color: #0056b3;
+.container #about-section #about-text p {
+   text-align: justify;
+   width: 50rem;
+   margin: auto;
+   margin-bottom: 0.5rem;
+}
+.container #about-section #about-text #social-links {
+   margin-top: 12rem;
+   color: #263131;
+   background: linear-gradient(
+      90deg,
+      rgba(38, 49, 49, 1) 0%,
+      rgba(127, 110, 96, 1) 70%,
+      rgba(227, 179, 148, 1) 100%
+   );
+}
+.container #about-section #about-text #social-links ul {
+   list-style: none;
+   bottom: 4rem;
+   right: 3rem;
+   padding: 1rem;
+   text-align: right;
 }
 
-/* Linkek */
-a {
-   font-family: "Roboto", sans-serif;
-   font-size: 16px;
-   color: #007bff;
-   text-decoration: none;
-}
-a:hover {
-   text-decoration: underline;
-   color: #0056b3;
+.container #about-section #about-text #social-links ul li a i {
+   color: #263131;
 }
