--- a/style.css
+++ b/style.css
@@ -120,6 +120,143 @@ h2 {
    display: block;
 }
 
+/* ##### About Section Styles ##### */
+
+.container {
+   margin: 5rem 0;
+   overflow: hidden;
+}
+
+.container #about-section {
+   position: relative;
+   height: 51rem;
+   left: 6.25rem;
+}
+.container #about-section #about-img {
+   position: absolute;
+   background-color: #9d9d9d;
+   height: 51rem;
+   overflow: hidden;
+   padding-left: 3rem;
+   border-bottom-left-radius: 100px;
+   border-top-left-radius: 20px;
+}
+.container #about-section #about-img img {
+   height: 50rem;
+   margin-top: 1rem;
+}
+.container #about-section #about-text {
+   position: absolute;
+   border-top-right-radius: 100px;
+   border-bottom-right-radius: 20px;
+   height: 51rem;
+   width: 76.5rem;
+   left: 30rem;
+   background-color: #263131;
+   /* background: linear-gradient(
+      90deg,
+      rgba(157, 157, 157, 1) 0%,
+      rgba(99, 99, 99, 1) 10%,
+      rgba(38, 49, 49, 1) 100%
+   ); */
+   padding: 0 5rem;
+}
+
+.container #about-section #about-text h1 {
+   margin-top: 10rem;
+   margin-bottom: 3rem;
+   padding: 1rem 0 1rem 0.5rem;
+   color: #263131;
+   background: linear-gradient(
+      90deg,
+      rgba(227, 179, 148, 1) 0%,
+      rgba(127, 110, 96, 1) 30%,
+      rgba(38, 49, 49, 1) 100%
+   );
+   border-radius: 10px;
+}
+.container #about-section #about-text p {
+   text-align: justify;
+   width: 50rem;
+   margin: auto;
+   margin-bottom: 0.5rem;
+}
+.container #about-section #about-text #social-links {
+   margin-top: 12rem;
+   color: #263131;
+   background: linear-gradient(
+      90deg,
+      rgba(38, 49, 49, 1) 0%,
+      rgba(127, 110, 96, 1) 70%,
+      rgba(227, 179, 148, 1) 100%
+   );
+   border-radius: 10px;
+}
+.container #about-section #about-text #social-links ul {
+   list-style: none;
+   bottom: 4rem;
+   right: 3rem;
+   padding: 1rem;
+   text-align: right;
+}
+
+.container #about-section #about-text #social-links ul li a {
+   color: #263131;
+}
+
+/* ##### Projects Section Styles ##### */
+
+.container #projects-section {
+   margin: 5rem auto;
+   padding: 1rem;
+   background-color: #263131;
+   height: 50rem;
+   width: 106.5rem;
+   border-top-left-radius: 20px;
+   border-top-right-radius: 100px;
+   border-bottom-left-radius: 100px;
+   border-bottom-right-radius: 20px;
+   overflow: hidden;
+}
+
+.container #projects-section h1 {
+   margin-bottom: 2rem;
+   padding: 1rem 0 1rem 1rem;
+   color: #263131;
+   background: linear-gradient(
+      90deg,
+      rgba(227, 179, 148, 1) 0%,
+      rgba(127, 110, 96, 1) 30%,
+      rgba(38, 49, 49, 1) 100%
+   );
+   border-radius: 4px;
+}
+
+.container #projects-container {
+   height: 42.4rem;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-around;
+}
+
+.container #projects-container .img {
+   margin-top: 7.475rem;
+}
+
+.container #projects-container img {
+   width: 30rem;
+   height: 20rem;
+   border-radius: 50px;
+   filter: blur(0.15rem);
+   transition: filter ease 0.5s;
+}
+
+.container #projects-container img:hover {
+   filter: blur(0);
+}
+
+/* ##### Media Queries ##### */
+
 @media (max-width: 1400px) {
    #navbar h2 {
       font-size: 30px;
@@ -167,77 +304,4 @@ h2 {
    }
 }
 @media (max-width: 768px) {
-}
-
-/* ##### About Section Styles ##### */
-
-.container {
-   margin: 4rem 0;
-   overflow: hidden;
-}
-
-.container #about-section {
-   position: relative;
-   height: 51rem;
-   left: 6.5rem;
-}
-.container #about-section #about-img {
-   position: absolute;
-   background-color: #9d9d9d;
-   height: 51rem;
-   overflow: hidden;
-   padding-left: 3rem;
-}
-.container #about-section #about-img img {
-   height: 50rem;
-   margin-top: 1rem;
-}
-.container #about-section #about-text {
-   position: absolute;
-   border-radius: 50px;
-   height: 51rem;
-   width: 76.5rem;
-   left: 30rem;
-   background-color: #263131;
-   padding: 0 5rem;
-}
-
-.container #about-section #about-text h1 {
-   margin-top: 10rem;
-   margin-bottom: 3rem;
-   padding: 1rem 0 1rem 0.5rem;
-   color: #263131;
-   background: linear-gradient(
-      90deg,
-      rgba(227, 179, 148, 1) 0%,
-      rgba(127, 110, 96, 1) 30%,
-      rgba(38, 49, 49, 1) 100%
-   );
-}
-.container #about-section #about-text p {
-   text-align: justify;
-   width: 50rem;
-   margin: auto;
-   margin-bottom: 0.5rem;
-}
-.container #about-section #about-text #social-links {
-   margin-top: 12rem;
-   color: #263131;
-   background: linear-gradient(
-      90deg,
-      rgba(38, 49, 49, 1) 0%,
-      rgba(127, 110, 96, 1) 70%,
-      rgba(227, 179, 148, 1) 100%
-   );
-}
-.container #about-section #about-text #social-links ul {
-   list-style: none;
-   bottom: 4rem;
-   right: 3rem;
-   padding: 1rem;
-   text-align: right;
-}
-
-.container #about-section #about-text #social-links ul li a i {
-   color: #263131;
 }
