Rewrite some code to look better

--- a/style.css
+++ b/style.css
@@ -123,48 +123,46 @@ h2 {
 /* ##### About Section Styles ##### */
 
 .container {
-   margin: 5rem 0;
-   overflow: hidden;
+   padding-top: 6rem;
 }
 
 .container #about-section {
-   position: relative;
-   height: 51rem;
-   left: 6.25rem;
+   display: flex;
+   flex-direction: row;
+   margin: auto;
+   height: 40rem;
+   width: fit-content;
+   border-bottom-left-radius: 100px;
+   border-top-left-radius: 20px;
+   border-top-right-radius: 100px;
+   border-bottom-right-radius: 20px;
+   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
 .container #about-section #about-img {
-   position: absolute;
    background-color: #9d9d9d;
-   height: 51rem;
-   overflow: hidden;
    padding-left: 3rem;
+   height: 40rem;
+   width: 25rem;
+   overflow: hidden;
    border-bottom-left-radius: 100px;
    border-top-left-radius: 20px;
 }
 .container #about-section #about-img img {
-   height: 50rem;
+   height: 40rem;
    margin-top: 1rem;
 }
 .container #about-section #about-text {
-   position: absolute;
    border-top-right-radius: 100px;
    border-bottom-right-radius: 20px;
-   height: 51rem;
-   width: 76.5rem;
-   left: 30rem;
+   height: 40rem;
+   width: 75rem;
    background-color: #263131;
-   /* background: linear-gradient(
-      90deg,
-      rgba(157, 157, 157, 1) 0%,
-      rgba(99, 99, 99, 1) 10%,
-      rgba(38, 49, 49, 1) 100%
-   ); */
    padding: 0 5rem;
 }
 
 .container #about-section #about-text h1 {
-   margin-top: 10rem;
-   margin-bottom: 3rem;
+   margin-top: 5rem;
+   margin-bottom: 5rem;
    padding: 1rem 0 1rem 0.5rem;
    color: #263131;
    background: linear-gradient(
@@ -182,7 +180,7 @@ h2 {
    margin-bottom: 0.5rem;
 }
 .container #about-section #about-text #social-links {
-   margin-top: 12rem;
+   margin-top: 5rem;
    color: #263131;
    background: linear-gradient(
       90deg,
@@ -207,20 +205,20 @@ h2 {
 /* ##### Projects Section Styles ##### */
 
 .container #projects-section {
-   margin: 5rem auto;
-   padding: 1rem;
+   margin: 10rem auto;
+   padding: 3rem;
    background-color: #263131;
-   height: 50rem;
-   width: 106.5rem;
+   height: 40rem;
+   width: 100rem;
    border-top-left-radius: 20px;
    border-top-right-radius: 100px;
    border-bottom-left-radius: 100px;
    border-bottom-right-radius: 20px;
+   box-shadow: 10px 10px 10px 10px rgba(0, 0, 0, 0.5);
    overflow: hidden;
 }
 
 .container #projects-section h1 {
-   margin-bottom: 2rem;
    padding: 1rem 0 1rem 1rem;
    color: #263131;
    background: linear-gradient(
@@ -233,26 +231,55 @@ h2 {
 }
 
 .container #projects-container {
-   height: 42.4rem;
    display: flex;
    flex-direction: row;
-   justify-content: space-around;
+   justify-content: center;
+   height: fit-content;
+}
+
+.container #projects-container .column {
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   margin-top: 4rem;
+   width: 50%;
 }
 
 .container #projects-container .img {
-   margin-top: 7.475rem;
+   margin-top: 3rem;
 }
 
 .container #projects-container img {
-   width: 30rem;
-   height: 20rem;
+   width: 25rem;
+   height: 15rem;
    border-radius: 50px;
-   filter: blur(0.15rem);
+   filter: blur(0.1rem);
    transition: filter ease 0.5s;
 }
 
 .container #projects-container img:hover {
    filter: blur(0);
+}
+
+.container #projects-container #ruander {
+   position: relative;
+}
+
+.container #projects-container #ruander #left-button {
+   position: absolute;
+   top: 11rem;
+   left: 6rem;
+   font-size: 3rem;
+   cursor: pointer;
+}
+
+.container #projects-container #ruander #right-button {
+   position: absolute;
+   top: 11rem;
+   right: 6rem;
+   font-size: 3rem;
+   cursor: pointer;
 }
 
 /* ##### Media Queries ##### */
