+ Layout fixed + Fixed column styling finished

--- a/teszt.css
+++ b/teszt.css
@@ -1,27 +1,102 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+
+/* ××××× Color variables ××××× */
+:root {
+   --primary-bg: #0d1b2a;
+   --secondary-bg: #1b263b;
+   --accent: #415a77;
+   --primary-text: #ffffff;
+   --secondary-text: #c0c0c0;
+   --highlight: #00e7c9;
+}
+
+/* ××××× Layout styling ××××× */
+body {
+   font-family: "Roboto", sans-serif;
+   line-height: 1.6;
+   text-align: justify;
+   background-color: var(--primary-bg);
+   color: var(--primary-text);
+}
+
+h1,
+h3 {
+   font-family: "Montserrat", sans-serif;
+}
+
+p {
+   color: var(--secondary-text);
+}
+
+a {
+   text-decoration: none;
+   color: var(--highlight);
+   background-color: var(--secondary-bg);
+   border: none;
+}
+
+.highlight {
+   color: var(--highlight);
+}
+
 .container-fluid {
    display: flex;
-   height: 50rem;
+   height: 100vh;
    margin: auto;
 }
 
-.fixed-column {
+.container-fluid .fixed-column {
    width: 50%;
-   height: 50rem;
-   background-color: #f4f4f4;
+   height: 100%;
    position: fixed;
+   display: flex;
 }
 
-.scrollable-column {
+.container-fluid .scrollable-column {
    width: 50%;
-   height: 50rem;
+   height: 100%;
    margin-left: 50%;
    flex-grow: 1;
    overflow-y: auto;
-   background-color: #fff;
 }
 
-img {
+/* ××××× Fixed content styling ××××× */
+.container-fluid .fixed-column #fixed-content {
+   width: 40rem;
+   margin: auto;
+}
+
+.container-fluid .fixed-column #fixed-content #fixed-img img {
    width: 10rem;
    border-radius: 50%; /* Makes the image circular */
    object-fit: cover;
+}
+
+.container-fluid .fixed-column #fixed-content #fixed-buttons {
+   float: right;
+}
+
+.container-fluid .fixed-column #fixed-content #fixed-buttons a {
+   height: 3rem;
+   padding-top: 0.75rem;
+   -webkit-box-shadow: 0px 0px 20px 0px rgba(65, 90, 119, 1);
+   -moz-box-shadow: 0px 0px 20px 0px rgba(65, 90, 119, 1);
+   box-shadow: 0px 0px 20px 0px rgba(65, 90, 119, 1);
+   cursor: pointer;
+   transition: all 0.3s ease;
+}
+
+.container-fluid .fixed-column #fixed-content #fixed-buttons #btn-cv {
+   width: 12rem;
+}
+
+.container-fluid .fixed-column #fixed-content #fixed-buttons #btn-hire {
+   width: 8rem;
+}
+
+.container-fluid .fixed-column #fixed-content #fixed-buttons a:hover {
+   background-color: var(--highlight);
+   color: var(--secondary-bg);
+   border-radius: 50px;
 }
