--- a/teszt.css
+++ b/teszt.css
@@ -21,7 +21,9 @@ body {
 }
 
 h1,
-h3 {
+h2,
+h3,
+h4 {
    font-family: "Montserrat", sans-serif;
 }
 
@@ -29,8 +31,7 @@ p {
    color: var(--secondary-text);
 }
 
-a {
-   text-decoration: none;
+.btn {
    color: var(--highlight);
    background-color: var(--secondary-bg);
    border: none;
@@ -41,44 +42,55 @@ a {
 }
 
 .container-fluid {
-   display: flex;
    height: 100vh;
+   width: 100%;
    margin: auto;
 }
 
-.container-fluid .fixed-column {
+.fixed-column {
    width: 50%;
    height: 100%;
    position: fixed;
    display: flex;
+   padding-left: 3rem;
 }
 
-.container-fluid .scrollable-column {
+.scrollable-column {
    width: 50%;
    height: 100%;
-   margin-left: 50%;
-   flex-grow: 1;
+   padding: 5rem 0 0 3rem;
+   float: right;
    overflow-y: auto;
+   scrollbar-width: none;
 }
 
 /* ××××× Fixed content styling ××××× */
-.container-fluid .fixed-column #fixed-content {
-   width: 40rem;
+#fixed-content {
+   width: 45rem;
    margin: auto;
+   padding: 1.5rem;
+   border-radius: 10px;
 }
 
-.container-fluid .fixed-column #fixed-content #fixed-img img {
+#fixed-img img {
    width: 10rem;
-   border-radius: 50%; /* Makes the image circular */
+   margin-bottom: 1rem;
+   border-radius: 50%;
    object-fit: cover;
 }
 
-.container-fluid .fixed-column #fixed-content #fixed-buttons {
-   float: right;
+#fixed-text {
+   margin-bottom: 2rem;
 }
 
-.container-fluid .fixed-column #fixed-content #fixed-buttons a {
+#fixed-button {
+   float: right;
+   margin-top: 1rem;
+}
+
+#fixed-button a {
    height: 3rem;
+   width: 10rem;
    padding-top: 0.75rem;
    -webkit-box-shadow: 0px 0px 20px 0px rgba(65, 90, 119, 1);
    -moz-box-shadow: 0px 0px 20px 0px rgba(65, 90, 119, 1);
@@ -87,16 +99,123 @@ a {
    transition: all 0.3s ease;
 }
 
-.container-fluid .fixed-column #fixed-content #fixed-buttons #btn-cv {
-   width: 12rem;
-}
-
-.container-fluid .fixed-column #fixed-content #fixed-buttons #btn-hire {
-   width: 8rem;
-}
-
-.container-fluid .fixed-column #fixed-content #fixed-buttons a:hover {
+#fixed-button a:hover {
    background-color: var(--highlight);
    color: var(--secondary-bg);
    border-radius: 50px;
+}
+
+/* ××××× Scrollable content styling ××××× */
+.scrollable-content-blocks {
+   width: 35rem;
+   margin-left: 5rem;
+   margin-bottom: 5rem;
+   background-color: var(--secondary-bg);
+   border-radius: 10px;
+   -webkit-box-shadow: 0px 0px 20px 0px rgba(65, 90, 119, 1);
+   -moz-box-shadow: 0px 0px 20px 0px rgba(65, 90, 119, 1);
+   box-shadow: 0px 0px 20px 0px rgba(65, 90, 119, 1);
+}
+
+.scrollable-content-blocks h2 {
+   border-bottom: var(--accent) solid 3px;
+}
+
+.scrollable-content-blocks h4 {
+   width: 100%;
+   padding: 0.5rem 0;
+}
+
+#primary-skills-container,
+#secondary-skills-container {
+   margin: 2rem 0;
+   padding: 0 2rem;
+   display: flex;
+   flex-flow: row wrap;
+   justify-content: space-evenly;
+   align-content: space-evenly;
+   gap: 2rem 1.5rem;
+}
+
+.skill-logo-container {
+   height: 5rem;
+   width: fit-content;
+   padding: 1rem;
+   display: flex;
+   justify-content: center;
+   background-color: var(--secondary-bg);
+   border-radius: 10px;
+   -webkit-box-shadow: 0px 0px 8px 6px rgba(65, 90, 119, 1);
+   -moz-box-shadow: 0px 0px 8px 6px rgba(65, 90, 119, 1);
+   box-shadow: 0px 0px 8px 6px rgba(65, 90, 119, 1);
+}
+
+#skill-logos {
+   height: 3rem;
+}
+
+.double-img-container {
+   width: fit-content;
+   display: flex;
+}
+
+.double-img {
+   margin-right: 1rem;
+}
+
+/* ××××× Media queries ××××× */
+@media only screen and (max-width: 1400px) {
+   .scrollable-content-blocks {
+      width: 25rem;
+      margin: 3rem auto;
+   }
+   .skill-logo-container {
+      height: 4rem;
+   }
+   #skill-logos {
+      height: 2rem;
+   }
+}
+
+@media only screen and (max-width: 1070px) {
+   .scrollable-content-blocks {
+      width: 20rem;
+   }
+}
+
+@media only screen and (max-width: 920px) {
+   .container-fluid {
+      display: flex;
+      flex-direction: column;
+   }
+   .fixed-column {
+      height: auto;
+      width: 100%;
+      margin-top: 2rem;
+      padding: 0 2rem;
+      position: unset;
+   }
+   .scrollable-column {
+      width: 75%;
+      margin: auto;
+      padding: 0;
+      overflow-y: unset;
+   }
+   .scrollable-content-blocks {
+      width: 100%;
+      margin: 3rem auto;
+   }
+}
+
+@media only screen and (max-width: 600px) {
+   #fixed-button {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: auto;
+      float: unset;
+   }
+   #fixed-button a {
+      margin: 0 1rem;
+   }
 }
