--- a/portfolio.css
+++ b/portfolio.css
@@ -57,7 +57,7 @@ p {
 
 .scrollable-column {
    width: 50%;
-   height: 100%;
+   height: fit-content;
    padding: 5rem 0 0 3rem;
    float: right;
    overflow-y: auto;
@@ -73,7 +73,7 @@ p {
 }
 
 #fixed-img img {
-   width: 10rem;
+   width: 12rem;
    margin-bottom: 1rem;
    border-radius: 50%;
    object-fit: cover;
@@ -171,22 +171,35 @@ p {
    margin-right: 1rem;
 }
 
-.form-control {
-   background-color: var(--primary-bg);
-   color: var(--primary-text);
-   border: var(--accent);
-   -webkit-box-shadow: inset 0px 0px 8px 1px rgba(65, 90, 119, 1);
-   -moz-box-shadow: inset 0px 0px 8px 1px rgba(65, 90, 119, 1);
-   box-shadow: inset 0px 0px 8px 1px rgba(65, 90, 119, 1);
+.social-link-container {
+   height: 3.5rem;
+   display: flex;
+   flex-direction: row;
+   flex-wrap: wrap;
+   justify-content: space-between;
 }
 
-.form-control:focus {
-   background-color: var(--primary-bg);
-   color: var(--primary-text);
-   border: var(--accent);
-   -webkit-box-shadow: inset 0px 0px 8px 1px rgba(65, 90, 119, 1);
-   -moz-box-shadow: inset 0px 0px 8px 1px rgba(65, 90, 119, 1);
-   box-shadow: inset 0px 0px 8px 1px rgba(65, 90, 119, 1);
+.social-link-container p {
+   height: fit-content;
+   width: 4rem;
+}
+
+.span-container {
+   display: flex;
+   flex-direction: column;
+   align-items: end;
+}
+
+.social-links {
+   width: fit-content;
+   color: var(--highlight);
+   cursor: pointer;
+}
+
+#email-bubble,
+#github-bubble,
+#linkedin-bubble {
+   width: fit-content;
 }
 
 /* ××××× Media queries ××××× */
@@ -200,6 +213,17 @@ p {
    }
    #skill-logos {
       height: 2rem;
+   }
+   .social-link-container {
+      height: fit-content;
+      margin: 1rem 0;
+      flex-direction: column;
+      flex-wrap: wrap;
+   }
+   .span-container {
+      width: fit-content;
+      font-size: 15px;
+      margin-left: 0.5rem;
    }
 }
 
